# WEB_HW_12

./: main.py  pyproject.toml
src/conf/: config.py
src/database/: db.py  models.py
src/services/: auth.py
